// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Export at client side 1`] = `
Object {
  "AppChunk": [Function],
  "Avatar": [Function],
  "BaseButton": [Function],
  "BaseModal": [Function],
  "Button": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
    "themeType": [Function],
  },
  "GlobalStateProvider": [Function],
  "JU": null,
  "Link": [Function],
  "MetaTags": [Function],
  "Modal": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
    "themeType": [Function],
  },
  "NavLink": [Function],
  "PT": Object {
    "PropTypes": Object {
      "PropTypes": [Circular],
      "any": [Function],
      "array": [Function],
      "arrayOf": [Function],
      "bool": [Function],
      "checkPropTypes": [Function],
      "element": [Function],
      "elementType": [Function],
      "exact": [Function],
      "func": [Function],
      "instanceOf": [Function],
      "node": [Function],
      "number": [Function],
      "object": [Function],
      "objectOf": [Function],
      "oneOf": [Function],
      "oneOfType": [Function],
      "resetWarningCache": [Function],
      "shape": [Function],
      "string": [Function],
      "symbol": [Function],
    },
    "any": [Function],
    "array": [Function],
    "arrayOf": [Function],
    "bool": [Function],
    "checkPropTypes": [Function],
    "default": Object {
      "PropTypes": [Circular],
      "any": [Function],
      "array": [Function],
      "arrayOf": [Function],
      "bool": [Function],
      "checkPropTypes": [Function],
      "element": [Function],
      "elementType": [Function],
      "exact": [Function],
      "func": [Function],
      "instanceOf": [Function],
      "node": [Function],
      "number": [Function],
      "object": [Function],
      "objectOf": [Function],
      "oneOf": [Function],
      "oneOfType": [Function],
      "resetWarningCache": [Function],
      "shape": [Function],
      "string": [Function],
      "symbol": [Function],
    },
    "element": [Function],
    "elementType": [Function],
    "exact": [Function],
    "func": [Function],
    "instanceOf": [Function],
    "node": [Function],
    "number": [Function],
    "object": [Function],
    "objectOf": [Function],
    "oneOf": [Function],
    "oneOfType": [Function],
    "resetWarningCache": [Function],
    "shape": [Function],
    "string": [Function],
    "symbol": [Function],
  },
  "PageLayout": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
    "themeType": [Function],
  },
  "ScalableRect": [Function],
  "ThemeProvider": [Function],
  "Throbber": [Function],
  "Tooltip": [Function],
  "_": [Function],
  "api": Object {
    "Axios": [Function],
    "Cancel": [Function],
    "CancelToken": [Function],
    "all": [Function],
    "create": [Function],
    "default": [Function],
    "defaults": Object {
      "adapter": [Function],
      "headers": Object {
        "common": Object {
          "Accept": "application/json, text/plain, */*",
        },
        "delete": Object {},
        "get": Object {},
        "head": Object {},
        "patch": Object {
          "Content-Type": "application/x-www-form-urlencoded",
        },
        "post": Object {
          "Content-Type": "application/x-www-form-urlencoded",
        },
        "put": Object {
          "Content-Type": "application/x-www-form-urlencoded",
        },
      },
      "maxContentLength": -1,
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
    "delete": [Function],
    "get": [Function],
    "getUri": [Function],
    "head": [Function],
    "interceptors": Object {
      "request": InterceptorManager {
        "handlers": Array [],
      },
      "response": InterceptorManager {
        "handlers": Array [],
      },
    },
    "isCancel": [Function],
    "options": [Function],
    "patch": [Function],
    "post": [Function],
    "put": [Function],
    "request": [Function],
    "spread": [Function],
  },
  "client": [Function],
  "config": undefined,
  "hooks": Object {
    "useAsyncData": [Function],
    "useGlobalState": [Function],
  },
  "isomorphy": Object {
    "buildTimestamp": [Function],
    "isClientSide": [Function],
    "isDevBuild": [Function],
    "isProdBuild": [Function],
    "isServerSide": [Function],
  },
  "server": null,
  "themed": [Function],
  "time": [Function],
  "url": Object {
    "default": null,
    "parent": [Function],
  },
  "webpack": Object {
    "requireWeak": [Function],
    "resolveWeak": [Function],
  },
}
`;

exports[`Export at client side 2`] = `
Array [
  "templateSettings",
  "after",
  "ary",
  "assign",
  "assignIn",
  "assignInWith",
  "assignWith",
  "at",
  "before",
  "bind",
  "bindAll",
  "bindKey",
  "castArray",
  "chain",
  "chunk",
  "compact",
  "concat",
  "cond",
  "conforms",
  "constant",
  "countBy",
  "create",
  "curry",
  "curryRight",
  "debounce",
  "defaults",
  "defaultsDeep",
  "defer",
  "delay",
  "difference",
  "differenceBy",
  "differenceWith",
  "drop",
  "dropRight",
  "dropRightWhile",
  "dropWhile",
  "fill",
  "filter",
  "flatMap",
  "flatMapDeep",
  "flatMapDepth",
  "flatten",
  "flattenDeep",
  "flattenDepth",
  "flip",
  "flow",
  "flowRight",
  "fromPairs",
  "functions",
  "functionsIn",
  "groupBy",
  "initial",
  "intersection",
  "intersectionBy",
  "intersectionWith",
  "invert",
  "invertBy",
  "invokeMap",
  "iteratee",
  "keyBy",
  "keys",
  "keysIn",
  "map",
  "mapKeys",
  "mapValues",
  "matches",
  "matchesProperty",
  "memoize",
  "merge",
  "mergeWith",
  "method",
  "methodOf",
  "mixin",
  "negate",
  "nthArg",
  "omit",
  "omitBy",
  "once",
  "orderBy",
  "over",
  "overArgs",
  "overEvery",
  "overSome",
  "partial",
  "partialRight",
  "partition",
  "pick",
  "pickBy",
  "property",
  "propertyOf",
  "pull",
  "pullAll",
  "pullAllBy",
  "pullAllWith",
  "pullAt",
  "range",
  "rangeRight",
  "rearg",
  "reject",
  "remove",
  "rest",
  "reverse",
  "sampleSize",
  "set",
  "setWith",
  "shuffle",
  "slice",
  "sortBy",
  "sortedUniq",
  "sortedUniqBy",
  "split",
  "spread",
  "tail",
  "take",
  "takeRight",
  "takeRightWhile",
  "takeWhile",
  "tap",
  "throttle",
  "thru",
  "toArray",
  "toPairs",
  "toPairsIn",
  "toPath",
  "toPlainObject",
  "transform",
  "unary",
  "union",
  "unionBy",
  "unionWith",
  "uniq",
  "uniqBy",
  "uniqWith",
  "unset",
  "unzip",
  "unzipWith",
  "update",
  "updateWith",
  "values",
  "valuesIn",
  "without",
  "words",
  "wrap",
  "xor",
  "xorBy",
  "xorWith",
  "zip",
  "zipObject",
  "zipObjectDeep",
  "zipWith",
  "entries",
  "entriesIn",
  "extend",
  "extendWith",
  "add",
  "attempt",
  "camelCase",
  "capitalize",
  "ceil",
  "clamp",
  "clone",
  "cloneDeep",
  "cloneDeepWith",
  "cloneWith",
  "conformsTo",
  "deburr",
  "defaultTo",
  "divide",
  "endsWith",
  "eq",
  "escape",
  "escapeRegExp",
  "every",
  "find",
  "findIndex",
  "findKey",
  "findLast",
  "findLastIndex",
  "findLastKey",
  "floor",
  "forEach",
  "forEachRight",
  "forIn",
  "forInRight",
  "forOwn",
  "forOwnRight",
  "get",
  "gt",
  "gte",
  "has",
  "hasIn",
  "head",
  "identity",
  "includes",
  "indexOf",
  "inRange",
  "invoke",
  "isArguments",
  "isArray",
  "isArrayBuffer",
  "isArrayLike",
  "isArrayLikeObject",
  "isBoolean",
  "isBuffer",
  "isDate",
  "isElement",
  "isEmpty",
  "isEqual",
  "isEqualWith",
  "isError",
  "isFinite",
  "isFunction",
  "isInteger",
  "isLength",
  "isMap",
  "isMatch",
  "isMatchWith",
  "isNaN",
  "isNative",
  "isNil",
  "isNull",
  "isNumber",
  "isObject",
  "isObjectLike",
  "isPlainObject",
  "isRegExp",
  "isSafeInteger",
  "isSet",
  "isString",
  "isSymbol",
  "isTypedArray",
  "isUndefined",
  "isWeakMap",
  "isWeakSet",
  "join",
  "kebabCase",
  "last",
  "lastIndexOf",
  "lowerCase",
  "lowerFirst",
  "lt",
  "lte",
  "max",
  "maxBy",
  "mean",
  "meanBy",
  "min",
  "minBy",
  "stubArray",
  "stubFalse",
  "stubObject",
  "stubString",
  "stubTrue",
  "multiply",
  "nth",
  "noConflict",
  "noop",
  "now",
  "pad",
  "padEnd",
  "padStart",
  "parseInt",
  "random",
  "reduce",
  "reduceRight",
  "repeat",
  "replace",
  "result",
  "round",
  "runInContext",
  "sample",
  "size",
  "snakeCase",
  "some",
  "sortedIndex",
  "sortedIndexBy",
  "sortedIndexOf",
  "sortedLastIndex",
  "sortedLastIndexBy",
  "sortedLastIndexOf",
  "startCase",
  "startsWith",
  "subtract",
  "sum",
  "sumBy",
  "template",
  "times",
  "toFinite",
  "toInteger",
  "toLength",
  "toLower",
  "toNumber",
  "toSafeInteger",
  "toString",
  "toUpper",
  "trim",
  "trimEnd",
  "trimStart",
  "truncate",
  "unescape",
  "uniqueId",
  "upperCase",
  "upperFirst",
  "each",
  "eachRight",
  "first",
  "VERSION",
  "_",
]
`;

exports[`Export at client side 3`] = `
Array [
  "momentProperties",
  "suppressDeprecationWarnings",
  "deprecationHandler",
  "parseTwoDigitYear",
  "createFromInputFallback",
  "ISO_8601",
  "RFC_2822",
  "updateOffset",
  "defaultFormat",
  "defaultFormatUtc",
  "lang",
  "langData",
  "version",
  "fn",
  "min",
  "max",
  "now",
  "utc",
  "unix",
  "months",
  "isDate",
  "locale",
  "invalid",
  "duration",
  "isMoment",
  "weekdays",
  "parseZone",
  "localeData",
  "isDuration",
  "monthsShort",
  "weekdaysMin",
  "defineLocale",
  "updateLocale",
  "locales",
  "weekdaysShort",
  "normalizeUnits",
  "relativeTimeRounding",
  "relativeTimeThreshold",
  "calendarFormat",
  "HTML5_FMT",
  "SEC_MS",
  "MIN_MS",
  "HOUR_MS",
  "DAY_MS",
  "YEAR_MS",
  "timer",
]
`;

exports[`Export at server side 1`] = `
Object {
  "AppChunk": [Function],
  "Avatar": [Function],
  "BaseButton": [Function],
  "BaseModal": [Function],
  "Button": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
    "themeType": [Function],
  },
  "GlobalStateProvider": [Function],
  "JU": Object {
    "findInDomByClass": [Function],
    "findInDomManyByClass": [Function],
    "render": [Function],
    "renderDom": [Function],
    "shallowRender": [Function],
    "shallowSnapshot": [Function],
    "simulate": Object {
      "abort": [Function],
      "animationEnd": [Function],
      "animationIteration": [Function],
      "animationStart": [Function],
      "auxClick": [Function],
      "beforeInput": [Function],
      "blur": [Function],
      "canPlay": [Function],
      "canPlayThrough": [Function],
      "cancel": [Function],
      "change": [Function],
      "click": [Function],
      "close": [Function],
      "compositionEnd": [Function],
      "compositionStart": [Function],
      "compositionUpdate": [Function],
      "contextMenu": [Function],
      "copy": [Function],
      "cut": [Function],
      "doubleClick": [Function],
      "drag": [Function],
      "dragEnd": [Function],
      "dragEnter": [Function],
      "dragExit": [Function],
      "dragLeave": [Function],
      "dragOver": [Function],
      "dragStart": [Function],
      "drop": [Function],
      "durationChange": [Function],
      "emptied": [Function],
      "encrypted": [Function],
      "ended": [Function],
      "error": [Function],
      "focus": [Function],
      "gotPointerCapture": [Function],
      "input": [Function],
      "invalid": [Function],
      "keyDown": [Function],
      "keyPress": [Function],
      "keyUp": [Function],
      "load": [Function],
      "loadStart": [Function],
      "loadedData": [Function],
      "loadedMetadata": [Function],
      "lostPointerCapture": [Function],
      "mouseDown": [Function],
      "mouseEnter": [Function],
      "mouseLeave": [Function],
      "mouseMove": [Function],
      "mouseOut": [Function],
      "mouseOver": [Function],
      "mouseUp": [Function],
      "paste": [Function],
      "pause": [Function],
      "play": [Function],
      "playing": [Function],
      "pointerCancel": [Function],
      "pointerDown": [Function],
      "pointerEnter": [Function],
      "pointerLeave": [Function],
      "pointerMove": [Function],
      "pointerOut": [Function],
      "pointerOver": [Function],
      "pointerUp": [Function],
      "progress": [Function],
      "rateChange": [Function],
      "reset": [Function],
      "scroll": [Function],
      "seeked": [Function],
      "seeking": [Function],
      "select": [Function],
      "stalled": [Function],
      "submit": [Function],
      "suspend": [Function],
      "timeUpdate": [Function],
      "toggle": [Function],
      "touchCancel": [Function],
      "touchEnd": [Function],
      "touchMove": [Function],
      "touchStart": [Function],
      "transitionEnd": [Function],
      "volumeChange": [Function],
      "waiting": [Function],
      "wheel": [Function],
    },
    "snapshot": [Function],
  },
  "Link": [Function],
  "MetaTags": [Function],
  "Modal": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
    "themeType": [Function],
  },
  "NavLink": [Function],
  "PT": Object {
    "PropTypes": Object {
      "PropTypes": [Circular],
      "any": [Function],
      "array": [Function],
      "arrayOf": [Function],
      "bool": [Function],
      "checkPropTypes": [Function],
      "element": [Function],
      "elementType": [Function],
      "exact": [Function],
      "func": [Function],
      "instanceOf": [Function],
      "node": [Function],
      "number": [Function],
      "object": [Function],
      "objectOf": [Function],
      "oneOf": [Function],
      "oneOfType": [Function],
      "resetWarningCache": [Function],
      "shape": [Function],
      "string": [Function],
      "symbol": [Function],
    },
    "any": [Function],
    "array": [Function],
    "arrayOf": [Function],
    "bool": [Function],
    "checkPropTypes": [Function],
    "default": Object {
      "PropTypes": [Circular],
      "any": [Function],
      "array": [Function],
      "arrayOf": [Function],
      "bool": [Function],
      "checkPropTypes": [Function],
      "element": [Function],
      "elementType": [Function],
      "exact": [Function],
      "func": [Function],
      "instanceOf": [Function],
      "node": [Function],
      "number": [Function],
      "object": [Function],
      "objectOf": [Function],
      "oneOf": [Function],
      "oneOfType": [Function],
      "resetWarningCache": [Function],
      "shape": [Function],
      "string": [Function],
      "symbol": [Function],
    },
    "element": [Function],
    "elementType": [Function],
    "exact": [Function],
    "func": [Function],
    "instanceOf": [Function],
    "node": [Function],
    "number": [Function],
    "object": [Function],
    "objectOf": [Function],
    "oneOf": [Function],
    "oneOfType": [Function],
    "resetWarningCache": [Function],
    "shape": [Function],
    "string": [Function],
    "symbol": [Function],
  },
  "PageLayout": Object {
    "$$typeof": Symbol(react.forward_ref),
    "render": [Function],
    "themeType": [Function],
  },
  "ScalableRect": [Function],
  "ThemeProvider": [Function],
  "Throbber": [Function],
  "Tooltip": [Function],
  "_": [Function],
  "api": Object {
    "Axios": [Function],
    "Cancel": [Function],
    "CancelToken": [Function],
    "all": [Function],
    "create": [Function],
    "default": [Function],
    "defaults": Object {
      "adapter": [Function],
      "headers": Object {
        "common": Object {
          "Accept": "application/json, text/plain, */*",
        },
        "delete": Object {},
        "get": Object {},
        "head": Object {},
        "patch": Object {
          "Content-Type": "application/x-www-form-urlencoded",
        },
        "post": Object {
          "Content-Type": "application/x-www-form-urlencoded",
        },
        "put": Object {
          "Content-Type": "application/x-www-form-urlencoded",
        },
      },
      "maxContentLength": -1,
      "timeout": 0,
      "transformRequest": Array [
        [Function],
      ],
      "transformResponse": Array [
        [Function],
      ],
      "validateStatus": [Function],
      "xsrfCookieName": "XSRF-TOKEN",
      "xsrfHeaderName": "X-XSRF-TOKEN",
    },
    "delete": [Function],
    "get": [Function],
    "getUri": [Function],
    "head": [Function],
    "interceptors": Object {
      "request": InterceptorManager {
        "handlers": Array [],
      },
      "response": InterceptorManager {
        "handlers": Array [],
      },
    },
    "isCancel": [Function],
    "options": [Function],
    "patch": [Function],
    "post": [Function],
    "put": [Function],
    "request": [Function],
    "spread": [Function],
  },
  "client": [Function],
  "config": Config {
    "SECRET": Object {
      "dummySecretKey": "Dummy Secret Value",
    },
    "dummyKey": "Dummy Value",
  },
  "hooks": Object {
    "useAsyncData": [Function],
    "useGlobalState": [Function],
  },
  "isomorphy": Object {
    "buildTimestamp": [Function],
    "isClientSide": [Function],
    "isDevBuild": [Function],
    "isProdBuild": [Function],
    "isServerSide": [Function],
  },
  "server": [Function],
  "themed": [Function],
  "time": [Function],
  "url": Object {
    "default": null,
    "parent": [Function],
  },
  "webpack": Object {
    "requireWeak": [Function],
    "resolveWeak": [Function],
  },
}
`;

exports[`Export at server side 2`] = `
Array [
  "momentProperties",
  "suppressDeprecationWarnings",
  "deprecationHandler",
  "parseTwoDigitYear",
  "createFromInputFallback",
  "ISO_8601",
  "RFC_2822",
  "updateOffset",
  "defaultFormat",
  "defaultFormatUtc",
  "lang",
  "langData",
  "version",
  "fn",
  "min",
  "max",
  "now",
  "utc",
  "unix",
  "months",
  "isDate",
  "locale",
  "invalid",
  "duration",
  "isMoment",
  "weekdays",
  "parseZone",
  "localeData",
  "isDuration",
  "monthsShort",
  "weekdaysMin",
  "defineLocale",
  "updateLocale",
  "locales",
  "weekdaysShort",
  "normalizeUnits",
  "relativeTimeRounding",
  "relativeTimeThreshold",
  "calendarFormat",
  "HTML5_FMT",
  "SEC_MS",
  "MIN_MS",
  "HOUR_MS",
  "DAY_MS",
  "YEAR_MS",
  "timer",
]
`;
